# pdf_processor

./: .gitignore  README.md  mypy.ini  pdf_editor.py  pyproject.toml
tests/: test_handler.py  test_helper_function.py
text_books/: __init__.py  exceptions.py  helper_funcs.py  main.py
text_books/pdf/: __init__.py  book.py  handler.py  parsers.py  patterns.py
