[project]
name = "pdf"
version = "0.1.0"
description = ""
authors = [
    {name = "Carlos Huaccho",email = "Carlos@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pypdf (>=5.3.0,<6.0.0)",
    "pypdf2 (>=3.0.1,<4.0.0)",
    "ruff (>=0.9.7,<0.10.0)",
    "mypy (>=1.15.0,<2.0.0)",
    "pydocstyle (>=6.3.0,<7.0.0)",
    "isort (>=6.0.0,<7.0.0)",
    "pytest (>=8.3.4,<9.0.0)",
    "black (>=25.1.0,<26.0.0)",
    "pylint (>=3.3.4,<4.0.0)",
    "flake8 (>=7.1.2,<8.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
